# MoveSemantics

./: .gitignore  CMakeLists.txt  README.md  build.sh  forward.sh  move.sh  pic.sh  run.sh
include/: allocate.hpp  con_logger.hpp  gv_logger.hpp  html_logger.hpp  ilogger.hpp  log_initer.hpp  log_int.hpp  move_semantics.hpp  patterns.txt
include/forward/: allocate_forward.hpp  allocate_move.hpp  allocate_value.hpp
include/move/: meowing_int.hpp
src/: con_logger.cpp  gv_logger.cpp  hint.txt  html_logger.cpp  log_initer.cpp  log_int.cpp  main.cpp  move_semantics.cpp
src/forward/: allocate_forward.cpp  allocate_move.cpp  allocate_rvalue.cpp  allocate_value.cpp
src/move/: check.cpp  overload.cpp  template.cpp  universal.cpp
